<resources>
    <string name="app_name">Into wikipedia</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_explore">Explore</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_history">History</string>
    <string name="menu_search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ExploreFragmetToolbar">Search Wikipedia</string>
    <string name="ExploreFragmentToolbarSearchicon">Search</string>
    <string name="article_image_description">Article image description</string>
    <string name="SearchIconTransition">searchTransition</string>
    <string name="history_clear">Clear</string>
    <string name="ExploreToolbarTextView">IntoWikipedia</string>
    <string name="drawer_title">Into Wikipedia</string>
    <string name="drawer_title_description">Just dive into Wikipedia and \nlearn random articles 😃</string>
    <string name="Home">Home</string>
    <string name="setting">Setting</string>
    <string name="title_activity_settings">Settings</string>


    <string name="pref_header_general">General</string>

    <string name="pref_offline">Make Offline</string>
    <string name="pref_offline_description">Download favourite articles\nNote: you can just see your favourites article in offline mode.
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_send_message">Notify articles</string>
    <string-array name="pref_notification_time">
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>1 week</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_notification_time_values">
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>     <!-- 1 day -->
        <item>48</item>    <!-- 2 days -->
        <item>72</item>
        <item>168</item>  <!-- 1 week -->
        <item>-1</item>  <!-- Never -->
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="Explore_layout_manager">
        <item>Circle</item>
        <item>Staggerd Grid</item>
        <item>Linear</item>
        <item>Vertical List</item>
        <item>Horizontal List</item>
        <item>Gallery</item>
    </string-array>
    <string-array name="Explore_layout_manager_values">
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_send_message_description">Notify random article within selected time periods</string>
    <string name="loadMoreButton">Load More</string>
    <string name="setting_image">Navigate to Setting</string>
    <string name="home_drawer_image">Navigate Home</string>
    <string name="AboutPageDescription">This Application is made by Amin Dadgar\nSpecial Thanks:</string>
    <string name="laoshen"><u>leo shen: Layout Manager Library</u></string>
    <string name="karnSaheb"><u>Karn Saheb:Notification Library</u></string>
    <string name="yaroslav"><u>Yaroslav:Sliding root navigation Library</u></string>
    <string name="pranav"><u>Pranav Pandey:Dynamic Toasts Liabrary</u></string>
    <string name="HamedAkram"><u>Hammad Akram:Alert Library</u></string>

</resources>
