<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.AboutActivity"
        android:background="@color/background">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Into Wikipedia"
            android:id="@+id/AboutPageTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="80dp"
            android:textSize="32sp"
            android:textColor="@android:color/background_dark"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="Version 1.0.0"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AboutPageTitle" />

    <ImageButton
            android:id="@+id/BackButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            android:tint="@android:color/background_dark"
            android:background="@color/background"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_back_button" />

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:textColor="@android:color/background_dark"
            android:text="@string/AboutPageDescription"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
            android:id="@+id/leoshen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="false"
            android:text="@string/laoshen"
            android:textColor="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
            android:id="@+id/karnSaheb"
            android:layout_width="wrap_content"
            android:textColor="@android:color/background_dark"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/karnSaheb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leoshen" />

    <TextView
            android:id="@+id/Yaroslav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_dark"
            android:layout_marginTop="15dp"
            android:text="@string/yaroslav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/karnSaheb" />

    <TextView
            android:id="@+id/Pranav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_dark"
            android:layout_marginTop="15dp"
            android:text="@string/pranav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Yaroslav" />

    <TextView
            android:id="@+id/HammadAkram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_dark"
            android:layout_marginTop="15dp"
            android:text="@string/HamedAkram"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Pranav" />


</android.support.constraint.ConstraintLayout>